Refactored the code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Notification</string>
+
+    <string name="notif1">Default Notification</string>
+    <string name="notif2">Custom Notification </string>
+    <string name="notif3">Default Big Picture Notification with image URL</string>
+    <string name="notif4">Custom Big Picture Notification with image URL</string>
 </resources>
